# observer

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  project_plan
examples/: example_events.json
examples/attribute_test/: Cargo.toml
examples/attribute_test/tests/: tests.rs
examples/attribute_test/tests/compile-fail/: unbalanced_if.rs  undefined_variable.rs
examples/attribute_test/tests/ui/: balanced_if.rs
examples/balanced_trees/: Cargo.toml
examples/balanced_trees/src/: lib.rs
examples/observe_usage/: .env  Cargo.toml  TODO.md  main.rs  mod.rs  policy.rs  user_id.rs
examples/observe_usage/src/: db_test.rs  fn_test.rs  lib.rs  mysql_test.rs  policy.rs  tables.rs  user_id.rs
newrelic/: Cargo.toml
newrelic/src/: lib.rs
observer/: Cargo.toml  README.md
observer/src/: TODOs.md  context.rs  event.rs  frame.rs  lib.rs  mysql.rs  observe.rs  observe_fields.rs  observer_newrelic.rs  pg.rs  prelude.rs  readme.md  resulty.rs  span.rs  sql_parse.rs  tests.rs  utils.rs
observer/src/backends/: logger.rs
observer_attribute/: Cargo.toml  README.md  example_events.json
observer_attribute/random_stuff/: random_shit.rs
observer_attribute/src/: lib.rs
observer_dqueue/: Cargo.toml
observer_dqueue/src/: dummy_queue.rs  lib.rs
observer_kafka/: Cargo.toml
observer_kafka/src/: kafka_queue.rs  lib.rs
observer_queue/: Cargo.toml
observer_queue/src/: queue.rs
src/: TODOs.md  context.rs  event.rs  frame.rs  kafka_queue.rs  lib.rs  observe.rs  observe_fields.rs  observer.rs  observer_newrelic.rs  prelude.rs  queue.rs  readme.md  resulty.rs  tests.rs  utils.rs
src/observer_dqueue/: dummy_queue.rs  mod.rs
src/observer_kafka/: mod.rs
