[package]
name = "observer"
version = "0.1.6"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Observer"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["observer", "logging", "events_logging", "function_logging"]
repository = "https://github.com/ackotech/observer"

[dependencies]
serde = "~1.0.27"
serde_derive = "~1.0.27"
serde_json = "~1.0.9"
failure = "~0.1.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
lazy_static = "~1.2.0"
typetag = "0.1"
observer_attribute = "0.1.3"
#observer_attribute = {path = "./observer_attribute/"}
ackorelic = "0.1.5"
# ackorelic = {git = "https://github.com/ackotech/ackorelic", branch="query_parse"}

[dependencies.chrono]
version = "0.4"
features = ["serde"]

#[dependencies.observer_dqueue]
#path = "./observer_dqueue"
#version = "0.1.0"
#
#[dependencies.observer_queue]
#path = "./observer_queue"
#version = "0.1.0"