[package]
name = "observer"
version = "0.2.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Observer"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["observer", "logging", "events_logging", "function_logging"]
repository = "https://github.com/ackotech/observer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
failure = "0.1.7"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
lazy_static = "1.4.0"
observer_attribute = { path = "../observer_attribute"  }
diesel = { version = "1.4.3", features = ["r2d2", "chrono"] }
r2d2-diesel = "1.0.0"
antidote = "1.0.0"
r2d2 = "0.8.8"
log = "0.4.8"
log4rs = "0.10.0"
sqlparser = "0.5.0"

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]
