[package]
name = "observer"
version = "0.2.4"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Observer"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["observer", "logging", "events_logging", "function_logging"]
repository = "https://github.com/ackotech/observer"

[features]
default = []
postgres = ["diesel/postgres"]

[dependencies]
antidote = "1"
colored = "1"
diesel = { version = "1", features = ["r2d2", "chrono"] }
failure = "0.1"
lazy_static = "1"
log = "0.4"
log4rs = "0.11"
observer_attribute = "0.1.8"
r2d2 = "0.8"
r2d2-diesel = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.9.1"
sqlparser = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.chrono]
features = ["serde"]
version = "0.4"
