[package]
name = "observer"
version = "0.2.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Observer"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["observer", "logging", "events_logging", "function_logging"]
repository = "https://github.com/ackotech/observer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[features]
#default = ["postgres"]
#postgres = ["diesel/postgres"]

[dependencies]
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.90"
failure = "0.1.8"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
lazy_static = "1"
observer_attribute = { path = "../observer_attribute"  }
#diesel = { version = "1.4.3", features = ["r2d2", "chrono"] }
#r2d2-diesel = "1.0.0"
#antidote = "1.0.0"
#r2d2 = "0.8"
log = "0.4.17"
log4rs = "1.2.0"
#sqlparser = "0.5.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
