[package]
name = "observer_attribute"
version = "0.1.6"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Observer Attributes"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["observer", "logging", "events"]
repository = "https://github.com/ackotech/observer"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.9"
lazy_static = "1.4.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
darling = "0.10.2"

[dependencies.syn]
version = "1.0.16"
features = ["full"]
