[package]
name = "observer_attribute"
version = "0.1.6"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Observer Attributes"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["observer", "logging", "events"]
repository = "https://github.com/ackotech/observer"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0.47"
darling = "0.14.2"
lazy_static = "1"
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.90"

[dependencies.syn]
version = "1.0.105"
features = ["full"]
