[package]
name = "observe_usage"
version = "0.0.0"
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
serde_json = "1.0.48"
serde_derive = "1.0.104"
serde = "1.0.104"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
postgres = "0.17.2"
chrono-tz = "0.5.1"
lazy_static = "1.4.0"
derive_more = "0.99.3"
ackorelic = "0.1.10"
# ackorelic = {git = "https://github.com/ackotech/ackorelic", branch="query_parse"}

[dependencies.observer_attribute]
path="../../observer_attribute"

[dependencies.observer]
path="../../observer"
features = ["postgres"]

[dependencies.chrono]
version = "0.4.10"
features = ["serde"]

[dependencies.bigdecimal]
version = "0.1.0"
features = ["serde"]

#diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono", "sqlite", "mysql"] }

[dependencies.diesel]
version = "1.4.3"
features = [
    "postgres",
    "mysql",
#    "64-column-tables",
    "serde_json",
#    "network-address",
    "chrono",
#    "bigdecimal",
#    "num-bigint",
#    "num-integer",
#    "num-traits",
]
