[package]
name = "observe_usage"
version = "0.0.0"
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
ackorelic = "0.1.8"
chrono-tz = "~0.4"
derive_more = "0.14.0"
lazy_static = "~1.3.0"
postgres = "~0.15.2"
serde = "~1"
serde_derive = "~1"
serde_json = "~1"
uuid = { version = "0.7", features = ["serde", "v4"] }
# ackorelic = {git = "https://github.com/ackotech/ackorelic", branch="query_parse"}

[dependencies.observer_attribute]
version = "0.1.8"

[dependencies.observer]
version = "0.2.4"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.bigdecimal]
features = ["serde"]
version = "0.0.10"

#diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono", "sqlite", "mysql"] }

[dependencies.diesel]
features = ["postgres", "mysql", "serde_json", "chrono",
#    "bigdecimal",
#    "num-bigint",
#    "num-integer",
#    "num-traits",
]
version = "= 1.4.3"
